--- a/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/components/Sidebar/Sidebar.module.css
+++ b/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/components/Sidebar/Sidebar.module.css
@@ -1,7 +1,7 @@
 .sidebar {
-  background-color: var(--gray-800);
-  overflow: hidden;
+  background: var(--gray-800);
   border-radius: 8px;
+  overflow: hidden;
 }
 
 .cover {
@@ -12,10 +12,10 @@
 
 .profile {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 
-  margin-top: calc(0px - 1.5rem -6px);
+  margin-top: calc(0px - 1.5rem - 6px);
 }
 
 .profile strong {
@@ -26,8 +26,9 @@
 
 .profile span {
   font-size: 0.875rem;
+  color: var(--gray-400);
+  line-height: 1.6;
 }
-
 
 .avatar {
   box-sizing: initial;
@@ -38,9 +39,10 @@
   outline: 2px solid var(--green-500)
 }
 
-.footer {
+.sidebar footer {
   border-top: 1px solid var(--gray-600);
   margin-top: 1.5rem;
+  padding: 1.5rem 2rem 2rem;
 }
 
 .sidebar footer a {
@@ -54,7 +56,17 @@
   font-weight: bold;
   display: block;
   text-decoration: none;
+
   display: flex;
   align-items: center;
   justify-content: center;
+
+  gap: 0.5rem;
+
+  transition: color 0.1s, background-color 0.1s;
+}
+
+.sidebar footer a:hover {
+  background: var(--green-500);
+  color: var(--white);
 }
