--- a/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/global.css
+++ b/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/global.css
@@ -10,12 +10,19 @@
 
   --green-300: #00B37E;
   --green-500: #00875f;
+
+  --red-500: #F75A68;
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green-500);
 }
 
 body {
@@ -26,10 +33,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-body,
-input,
-textarea,
-button {
+body, input, textarea, button {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 1rem;
