--- a/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/components/Post/Post.module.css
+++ b/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/components/Post/Post.module.css
@@ -68,7 +68,7 @@
 
 .commentForm {
   /* Form doesnt have width 100% default */
-  width: 100%; 
+  width: 100%;
   margin-top: 1.5rem;
   padding-top: 1.5rem;
   border-top: 1px solid var(--gray-600);
@@ -102,7 +102,7 @@
   max-height: none;
 }
 
-.commentForm button[type=submit] {
+.commentForm button[type="submit"] {
   padding: 1rem 1.5rem;
   margin-top: 1rem;
   border-radius: 8px;
@@ -119,5 +119,6 @@
   background: var(--green-300);
 }
 
-
-
+.commentList {
+  margin-top: 2rem;
+}
