--- a/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/app.module.css
+++ b/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/app.module.css
@@ -9,3 +9,13 @@
   /* Usado para os elementos não esticarem por padrão- stretch */
   align-items: flex-start;
 }
+
+@media (max-width: 768px) {
+  html {
+    font-size: 87.5%;
+  }
+
+  .wrapper {
+    grid-template-columns: 1fr;
+  }
+}
