--- a/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/components/Post/Post.module.css
+++ b/rocketseat/rockeseat-bootcamp/reactjs/01-ignite-feed/src/components/Post/Post.module.css
@@ -107,6 +107,11 @@
   transition: background-color 0.1s;
 }
 
+.commentForm button[type="submit"]:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+
 .commentForm button[type="submit"]:not(:disabled):hover {
   background: var(--green-300);
 }
